Move media unit tests into single folder; rename files to match wpcom standard; minor updates

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,9 +23,7 @@
 			<directory phpVersion="5.6.0" phpVersionOperator=">=" prefix="test" suffix=".php">tests/php/core-api</directory>
 		</testsuite>
 		<testsuite name="media">
-			<file>tests/php/_inc/lib/test_class.jetpack-media-extractor.php</file>
-			<file>tests/php/_inc/lib/test_class.jetpack-media-summary.php</file>
-			<file>tests/php/test_class.jetpack-post-images.php</file>
+			<directory prefix="test" suffix=".php">tests/php/media</directory>
 		</testsuite>
 		<testsuite name="photon">
 			<file>tests/php/test_class.jetpack_photon.php</file>
@@ -34,7 +32,7 @@
 			<file>tests/php/test_class.functions.opengraph.php</file>
 		</testsuite>
 		<testsuite name="json-api">
-			<directory prefix="test_" suffix=".php">tests/php/json-api</directory>
+			<directory prefix="test" suffix=".php">tests/php/json-api</directory>
 		</testsuite>
 		<testsuite name="infinite-scroll">
 			<directory prefix="test_" suffix=".php">tests/php/modules/infinite-scroll</directory>
